--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -90,16 +90,18 @@ hibernate:
 
 dataSource:
     pooled: true
-    jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    dbCreate: "update"
+    url: "jdbc:mysql://localhost/clinic_life"
+    driverClassName: "com.mysql.jdbc.Driver"
+    username: "clinic_life"
+    password: "123456"
+
 
 environments:
     development:
         dataSource:
             dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: "jdbc:mysql://localhost/clinic_life"
     test:
         dataSource:
             dbCreate: update
