--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -90,26 +90,30 @@ hibernate:
 
 dataSource:
     pooled: true
-    dbCreate: "update"
-    url: "jdbc:mysql://localhost/clinic_life"
-    driverClassName: "com.mysql.jdbc.Driver"
-    username: "clinic_life"
-    password: "123456"
+    jmxExport: true
+    dbCreate: update
+    url: jdbc:mysql://localhost/clinic_life
+    driverClassName: com.mysql.jdbc.Driver
+    username: clinic_life
+    password: 123456xx.
+    dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+
+
 
 
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
-            url: "jdbc:mysql://localhost/clinic_life"
+            dbCreate: update
+            url: jdbc:mysql://localhost/clinic_life
     test:
         dataSource:
             dbCreate: update
-            url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:mysql://localhost/clinic_life
     production:
         dataSource:
             dbCreate: none
-            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:mysql://localhost/clinic_life
             properties:
                 jmxEnabled: true
                 initialSize: 5
